[project]
name = "cooptim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [

    "cvxpy>=1.7.5",

    "ecos>=2.0.14",

    "fastexcel>=0.18.0",

    "matplotlib>=3.10.8",

    "numpy>=2.4.0",

    "pandas-stubs~=2.3.3",

    "pandas>=2.3.3",

    "polars>=1.36.1",

    "pyarrow>=22.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
